init/opensearch-operator/ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: ${THIS_CLUSTER_ISSUER}
    nginx.ingress.kubernetes.io/rewrite-target: /
    spec.ingressClassName: ${THIS_CLUSTER_INGRESS}
    #traefik.ingress.kubernetes.io/router.middlewares: example-redirect-https@kubernetescrd
  labels:
    app.kubernetes.io/instance: opensearch-${THIS_NAME}
  name: opensearch-${THIS_NAME}
  namespace: ${THIS_NAMESPACE}
spec:
  ingressClassName: ${THIS_CLUSTER_INGRESS}
  rules:
  - host: ${THIS_OPENSEARCH_HOST}.${THIS_DOMAIN}
    http:
      paths:
      - backend:
          service:
            name: opensearch-${THIS_NAME}
            port:
              number: 5601
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - ${THIS_OPENSEARCH_HOST}.${THIS_DOMAIN}
    secretName: chart-${THIS_NAMESPACE}-${THIS_OPENSEARCH_HOST}-tls
